# notebook

./: .dockerignore  .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
app/: drizzle.config.ts  package.json  svelte.config.js  tailwind.config.js  vite.config.js
modules/app-node-natives/: Cargo.toml  index.js  package.json
modules/app-node-natives/.github/workflows/: CI.yml
modules/app-node-natives/npm/android-arm-eabi/: README.md  package.json
modules/app-node-natives/npm/android-arm64/: README.md  package.json
modules/app-node-natives/npm/darwin-arm64/: README.md  package.json
modules/app-node-natives/npm/darwin-universal/: README.md  package.json
modules/app-node-natives/npm/darwin-x64/: README.md  package.json
modules/app-node-natives/npm/freebsd-x64/: README.md  package.json
modules/app-node-natives/npm/linux-arm-gnueabihf/: README.md  package.json
modules/app-node-natives/npm/linux-arm-musleabihf/: README.md  package.json
modules/app-node-natives/npm/linux-arm64-gnu/: README.md  package.json
modules/app-node-natives/npm/linux-arm64-musl/: README.md  package.json
modules/app-node-natives/npm/linux-riscv64-gnu/: README.md  package.json
modules/app-node-natives/npm/linux-x64-gnu/: README.md  package.json
modules/app-node-natives/npm/linux-x64-musl/: README.md  package.json
modules/app-node-natives/npm/win32-arm64-msvc/: README.md  package.json
modules/app-node-natives/npm/win32-ia32-msvc/: README.md  package.json
modules/app-node-natives/npm/win32-x64-msvc/: README.md  package.json
(+64 files in other folders)
