[package]
name = "app-node-natives"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
